--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
@@ -15,10 +15,10 @@
         <Border Background="#FFF1F4FA"
                 CornerRadius="24"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <StackPanel>
+            <StackPanel Margin="0 0 0 16">
                 <TextBlock Text="Sales Report"
                        FontSize="24" FontWeight="Bold"
-                       Margin="32 16 32 0"/>
+                       Margin="32 16 32 26"/>
                 <Border Height="320"
                     Background="White"
                     CornerRadius="12"
@@ -29,7 +29,7 @@
                         <TextBlock Text="Báo Cáo Doanh Thu"
                                FontSize="20" FontWeight="DemiBold"
                                Margin="0 0 0 16"/>
-                        <lvc:CartesianChart Height="260"
+                        <lvc:CartesianChart Height="240"
                                         Series="{Binding SaleSeries}">
                             <lvc:CartesianChart.AxisX>
                                 <lvc:Axis Title="Dates" Labels="{Binding SaleLabels}">
@@ -61,6 +61,23 @@
                             </lvc:CartesianChart.AxisY>
                         </lvc:CartesianChart>
                     </StackPanel>
+                </Border>
+
+                <Border Background="White"
+                        Height="400"
+                        CornerRadius="12"
+                        BorderThickness="1"
+                        BorderBrush="LightGray"
+                        Margin="16">
+                    <Grid Margin="16">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="52"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <DataGrid Grid.Row="1"
+                                  Background="LightGray">
+                        </DataGrid>
+                    </Grid>
                 </Border>
             </StackPanel>
         </ScrollViewer>
