--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
@@ -18,47 +18,43 @@
             <TextBlock DockPanel.Dock ="Top" Text="Order Detail"
                        FontSize="24" FontWeight="Bold" 
                        Margin="32 16 32 0"/>
-            <StackPanel DockPanel.Dock="Left">
-
-                <Border Height="117"     
+                <StackPanel DockPanel.Dock="Left">
+                    <Border Height="100"     
                     HorizontalAlignment="Left"
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
                     Margin="16" Width="500">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
+                        <DockPanel Margin="16">
+                            <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
+                                <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
 
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-                            <StackPanel>
-                                <!--Search Textbox-->
-                                <WrapPanel HorizontalAlignment="Left">
-                                    <TextBlock Text="Customer Name:" Margin="20 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False" />
+                                <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
+                                    <Rectangle.Fill>
+                                        <SolidColorBrush Color="#2FE5A7"/>
+                                    </Rectangle.Fill>
+                                    <Rectangle.OpacityMask>
+                                        <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Canvas>
 
-                                    <TextBox Name="nameTextBox" Width="257"/>
-                                </WrapPanel>
-                                <!--Search Textbox-->
-                                <WrapPanel HorizontalAlignment="Left">
-                                    <TextBlock  Text="Address:"  Margin="20 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False" />
+                            <TextBlock Text="UnDeadCharger"
+                               FontSize="18" FontWeight="DemiBold"
+                               Margin="0 0 0 0" DockPanel.Dock="Top"/>
+                            <WrapPanel DockPanel.Dock="Bottom">
+                                <TextBlock Text="227 Đ. Nguyễn Văn Cừ, Phường 4, Quận 5, Thành phố Hồ Chí Minh"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
+                               Margin="0 0 0 0" />
+                                <TextBlock Text="(+84) 964 978 361"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
+                               Margin="0 0 0 0" />
+                            </WrapPanel>
 
-                                    <TextBox Name="addressTextBox" Width="300"/>
-                                </WrapPanel>
-                            </StackPanel>
-                           
                         </DockPanel>
-                </Border>
-
-                <WrapPanel  Margin=" 16 4 16 4">
+                    </Border>
+                    <WrapPanel  Margin=" 16 4 16 4">
                     <!--Search Textbox-->
                     <Grid Width="300" HorizontalAlignment="Left">
                         <TextBlock Margin="20 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False" />
@@ -223,145 +219,148 @@
 
             </StackPanel>
             <StackPanel DockPanel.Dock="Right">
-                <!--Status-->
-                <Border Height="117"     
+                    <!--Status-->
+                    <Border Height="100"     
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
+                    Margin="0 16 16 0" Width="225">
+                        <DockPanel Margin="16">
+                            <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
+                                <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
 
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
+                                <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
+                                    <Rectangle.Fill>
+                                        <SolidColorBrush Color="#2FE5A7"/>
+                                    </Rectangle.Fill>
+                                    <Rectangle.OpacityMask>
+                                        <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Canvas>
 
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
+                            <TextBlock Text="In Progress"
+                               FontSize="18" FontWeight="DemiBold"
+                               Margin="0 12 0 0" DockPanel.Dock="Top"/>
+                            <TextBlock Text="Waiting for Payment"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
                                Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!--Date-->
-                <Border Height="117"     
-                    Background="White"
-                    CornerRadius="12"
-                    BorderThickness="1"
-                    BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
-
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-                            <StackPanel VerticalAlignment="Center">
-                           
-                            <TextBox Name="TextBox" Width="150"/>
-                            <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-
-                            </StackPanel>
                         </DockPanel>
-                </Border>
-                <!--Total Number-->
-                <Border Height="117"     
+                    </Border>
+                    <!--Date-->
+                    <Border Height="100"     
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
+                    Margin="0 16 16 0" Width="225">
+                        <DockPanel Margin="16">
+                            <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
+                                <Ellipse Width="56" Height="56" Fill="#4DEDC85A"/>
 
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
-
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
+                                <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
+                                    <Rectangle.Fill>
+                                        <SolidColorBrush Color="#EDC85A"/>
+                                    </Rectangle.Fill>
+                                    <Rectangle.OpacityMask>
+                                        <ImageBrush ImageSource="../../Images/OrderManagementSVG/calendar-solid.png"/>
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Canvas>
+                            <TextBox Name="TextBox" Width="100"
+                               Text="25-04-2023"
+                               FontSize="16" FontWeight="DemiBold"
+                               Margin="0 12 0 0" DockPanel.Dock="Top"/>
+                            <TextBlock Text="Deliver Date"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
                                Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!--Total Price-->
-                <Border Height="117"     
+                        </DockPanel>
+                    </Border>
+                    <!--Total Number-->
+                    <Border Height="100"     
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
-                    Margin="16" Width="200">
-                    <DockPanel Margin="16">
-                        <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
-                            <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
+                   Margin="0 16 16 0" Width="225">
+                        <DockPanel Margin="16">
+                            <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
+                                <Ellipse Width="56" Height="56" Fill="#4DFF69B4"/>
 
-                            <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
-                                <Rectangle.Fill>
-                                    <SolidColorBrush Color="#2FE5A7"/>
-                                </Rectangle.Fill>
-                                <Rectangle.OpacityMask>
-                                    <ImageBrush ImageSource="../../Images/OrderManagementSVG/truck-solid.png"/>
-                                </Rectangle.OpacityMask>
-                            </Rectangle>
-                        </Canvas>
+                                <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
+                                    <Rectangle.Fill>
+                                        <SolidColorBrush Color="#FF69B4"/>
+                                    </Rectangle.Fill>
+                                    <Rectangle.OpacityMask>
+                                        <ImageBrush ImageSource="../../Images/OrderManagementSVG/cart-shopping-solid.png"/>
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Canvas>
 
-                        <TextBlock Text="20+"
-                               FontSize="22" FontWeight="DemiBold"
-                               Margin="0 16 0 0" DockPanel.Dock="Top"/>
-                        <TextBlock Text="Đơn hàng trong 1 tháng"
-                               FontSize="14" FontWeight="SemiBold" Foreground="#788B9A"
+                            <TextBlock Text="10 Books"
+                               FontSize="18" FontWeight="DemiBold"
+                               Margin="0 12 0 0" DockPanel.Dock="Top"/>
+                            <TextBlock Text="Number Of Items"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
                                Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
-                    </DockPanel>
-                </Border>
-                <!-- Cancel Change Button-->
-                <Border
-                        Background="#FF3A36DB"
-                        CornerRadius="4">
-                    <Border.InputBindings>
-                        <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
-                    </Border.InputBindings>
-                    <TextBlock Text="Add Order" 
-                               FontSize="12" FontWeight="DemiBold" Foreground="White"
+                        </DockPanel>
+                    </Border>
+                    <!--Total Price-->
+                    <Border Height="100"     
+                    Background="White"
+                    CornerRadius="12"
+                    BorderThickness="1"
+                    BorderBrush="LightGray"
+                    Margin="0 16 16 0" Width="225">
+                        <DockPanel Margin="16">
+                            <Canvas Width="56" Height="56" DockPanel.Dock="Left" Margin="0 0 16 0">
+                                <Ellipse Width="56" Height="56" Fill="#4D2FE5A7"/>
+
+                                <Rectangle Width="20" Height="20" Canvas.Left="18" Canvas.Top="18">
+                                    <Rectangle.Fill>
+                                        <SolidColorBrush Color="#2FE5A7"/>
+                                    </Rectangle.Fill>
+                                    <Rectangle.OpacityMask>
+                                        <ImageBrush ImageSource="../../Images/OrderManagementSVG/money-bill-solid.png"/>
+                                    </Rectangle.OpacityMask>
+                                </Rectangle>
+                            </Canvas>
+
+                            <TextBlock Text="1,000,000 VND"
+                               FontSize="18" FontWeight="DemiBold"
+                               Margin="0 12 0 0" DockPanel.Dock="Top"/>
+                            <TextBlock Text="Payment"
+                               FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
+                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
+
+                        </DockPanel>
+                    </Border>
+                    <!-- Cancel Change Button-->
+                    <Border
+                        Background="#FFFF69B4"
+                        CornerRadius="4"
+                        Margin="0 16 16 0" Width="225" Height="25">
+                        <Border.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
+                        </Border.InputBindings>
+                        <TextBlock Text="Delete Changes" 
+                               FontSize="16" FontWeight="Bold" Foreground="White"
                                HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
-                <!--Confirm Change Button-->
-                <Border
-                        Background="#FF3A36DB"
-                        CornerRadius="4">
-                    <Border.InputBindings>
-                        <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
-                    </Border.InputBindings>
-                    <TextBlock Text="Add Order" 
-                               FontSize="12" FontWeight="DemiBold" Foreground="White"
+                    </Border>
+                    <!--Confirm Change Button-->
+                    <Border
+                        Background="#FF2FE5A7"
+                        CornerRadius="4"
+                        Margin="0 16 16 0" Width="225" Height="25">
+                        <Border.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" Command="{Binding LoginCommand}"/>
+                        </Border.InputBindings>
+                        <TextBlock Text="Confirm Changes" 
+                               FontSize="16" FontWeight="Bold" Foreground="White"
                                HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Border>
+                    </Border>
+                 
             </StackPanel>
         </DockPanel>
         </ScrollViewer>
